--- a/Tokyo.html
+++ b/Tokyo.html
@@ -60,7 +60,7 @@ overflow: hidden;
 	    <li><a href="Mexico.html">M&eacute;xico</a></li>
 	    <li><a href="Paris.html">Paris</a></li>
 	    <li><a href="Londres.html">Londres</a></li>
-	    <li><a href="pagina1.html">Inicio</a></li>
+	    <li><a href="index.html">Inicio</a></li>
 	</ul>
 </nav>
 	
