--- a/Paris.html
+++ b/Paris.html
@@ -61,7 +61,7 @@ overflow: hidden;
 	    <li><a href="Mexico.html">M&eacute;xico</a></li>
 	    <li><a href="Tokyo.html">Tokyo</a></li>
 	    <li><a href="Londres.html">Londres</a></li>
-	    <li><a href="pagina1.html">Inicio</a></li>
+	    <li><a href="index.html">Inicio</a></li>
 	</ul>
 </nav>
 	
